RESOLVED FIXED184707
[Curl] Fix timing of reporting error to the client
https://bugs.webkit.org/show_bug.cgi?id=184707
Summary [Curl] Fix timing of reporting error to the client
Basuke Suzuki
Reported 2018-04-17 13:50:50 PDT
If error occurs at the end of transaction and didReceiveResponse is not called at that moment, the header information doesn't reach to the client properly. This fix resolve this situation.
Attachments
PATCH (3.98 KB, patch)
2018-04-17 13:57 PDT, Basuke Suzuki
no flags
Basuke Suzuki
Comment 1 2018-04-17 13:57:01 PDT
WebKit Commit Bot
Comment 2 2018-04-17 15:21:28 PDT
Comment on attachment 338146 [details] PATCH Clearing flags on attachment: 338146 Committed r230734: <https://trac.webkit.org/changeset/230734>
WebKit Commit Bot
Comment 3 2018-04-17 15:21:29 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-04-17 15:22:20 PDT
Note You need to log in before you can comment on or make changes to this bug.