[Curl] Fix timing of reporting error to the client https://bugs.webkit.org/show_bug.cgi?id=184707

Before checking the result code, check the status of callback invocation and
do the right thing.

Patch by Basuke Suzuki <Basuke.Suzuki@sony.com> on 2018-04-17
Reviewed by Youenn Fablet.

No new tests because there's no new behavior.

* platform/network/curl/CurlRequest.cpp:
(WebCore::CurlRequest::didCompleteTransfer):
* platform/network/curl/CurlRequest.h:
(WebCore::CurlRequest::needToInvokeDidReceiveResponse const):

Canonical link: https://commits.webkit.org/200220@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230734 268f45cc-cd09-0410-ab3c-d52691b4dbfc